# basic-cpp-compilation

./: .gitignore  README.md
.github/workflows/: main.yml
compilacion_modulo/: README.md  compile.sh  main.cpp
compilacion_modulo/src/: matematicas.cpp
compilacion_modulo_cmake/: CMakeLists.txt  README.md  compile.sh
compilacion_modulo_cmake/include/: matematicas.hpp
compilacion_modulo_cmake/src/: main.cpp
compilacion_modulo_makefile/: Makefile  README.md  compile.sh
compilacion_pasos/: README.md  compile.sh  main.cpp
lib_dinamica/: README.md  bar.hpp  compile.sh  main.cpp
lib_dinamica_soname/: README.md  compile.sh  foo.hpp
lib_estatica/: README.md  bar.cpp  compile.sh  foo.cpp
modulos_cmake_testing/: CMakeLists.txt  README.md  compile.sh  main.cpp
modulos_cmake_testing/include/: fisica.hpp
modulos_cmake_testing/src/: fisica.cpp
modulos_cmake_testing/tests/: CMakeLists.txt  ejemplo-test.cpp  fisica-test.cpp  matematicas-test.cpp
